# taches-principled

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.local.json
.claude-plugin/: _meta.json  marketplace.json  marketplace.schema.json  plugin.json
.claude/rules/: agent-contracts.md  context-fork-blackbox.md  cross-plugin-citations.md  cross-skill-references.md  ground-truth-citations.md  hub-router-budget.md  (+6 more)
agents/: analyzer.md  code-reviewer.md  comparator.md  grader.md  prompt-engineer.md  skill-auditor.md  subagent-auditor.md
commands/: audit-skill.md  audit-subagent.md  create-hook.md  create-plan.md  create-skill.md  create-subagent.md  debug.md  simplify.md  whats-next.md
docs/: CONTRIBUTING.md
knowledge/: SCHEMA.md
plugins/claude-cli-wrapper/: .mcp.json  Cargo.toml  README.md  SKILL.md
plugins/claude-cli-wrapper/.claude-plugin/: plugin.json
plugins/claude-cli-wrapper/agents/: wrapper-router.md  wrapper-schema-validator.md
plugins/claude-cli-wrapper/crates/wrapper/: Cargo.toml
plugins/claude-cli-wrapper/crates/wrapper/src/: claude_cli.rs  error.rs  main.rs  schema.rs  script.rs  server.rs  smoke_test.rs  tools.rs
plugins/claude-cli-wrapper/references/: config-file.md  rust-implementation.md  schema-reference.md  tool-patterns.md
plugins/claude-cli-wrapper/skills/agent-mgmt/: SKILL.md
plugins/claude-cli-wrapper/skills/claude-cli/: SKILL.md
plugins/claude-cli-wrapper/skills/config/: SKILL.md
plugins/claude-cli-wrapper/skills/context/: SKILL.md
plugins/claude-cli-wrapper/skills/execute/: SKILL.md
plugins/claude-cli-wrapper/skills/review/: SKILL.md
plugins/claude-cli-wrapper/skills/session/: SKILL.md
rules/: typescript-best-practices.md
scripts/: audit.py  check-citations.py  regenerate-marketplace.py
(+629 files in other folders)
