[package]
name = "claude-cli-wrapper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Optimal MCP wrapper for the Claude Code CLI — exposes claude_execute, claude_session, claude_context, claude_review, claude_agent, claude_config as both MCP tools (stdio) and skill-callable scripts."

[[bin]]
name = "claude-cli-wrapper"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
